[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.17"
[lib]
crate-type = ["cdylib", "lib"] 

[workspace]
members = [
    "programs/hello_solana"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 
